# typus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
dev/agents/: typus-v0.4.2-notes.md
dev/issues/: BBOX-CANONICAL-0001.md
dev/issues/P0/: TYPUS-GEOM-0001.md  TYPUS-MODELS-0002.md  TYPUS-REL-0005.md
dev/issues/P1/: TYPUS-DOC-0004.md  TYPUS-SCHEMA-0003.md
dev/scripts/: bootstrap-dev.sh
docs/: contributing.md  elevation_service.md  expanded_taxa.md  geometry.md  index.md  models.md  offline_mode.md  taxonomy_service.md  tracks.md
docs/migration/: dev_public_release_contract.md
docs/reference/: api.md  ops.md
docs/theme/overrides/: main.html
scripts/: agent_startup.sh  check_lock_upload_age.py  gen_fixture_sqlite.py  perf_report.py  pg_smoke.py
skills/typus/: SKILL.md
skills/typus/references/: geometry-utilities.md  integration-patterns.md  taxonomy-primitives.md
tests/: conftest.py  expanded_taxa_sample.sqlite  fixture_typus.sqlite  helpers.py  pg_test_utils.py  test_assets_api.py  test_async_compatibility.py  test_async_compatibility_ci.py  test_clade.py  test_classification.py  test_classification_round_trip.py  test_cross_backend_parity.py  test_detection_serialise.py  test_elevation_service.py  test_expanded_taxa_lca.py  test_geometry_bbox_norm.py  test_geometry_px_roundtrip.py  test_lineage_lca.py  test_models_canonical_bbox.py  test_name_search.py  test_perf_name_search_local.py  test_pg_index_helper.py  test_pg_test_ops.py  test_provider_gemini_mapping.py  test_rank.py  test_service_api.py  test_sqlite_loader.py  test_subtree.py  test_taxon_summary.py  test_taxonomy_service.py  test_tracks.py
tests/fixtures/classification/: cache_replay.json  curated_taxon_card.json  hierarchy_repair.json  raw_inference.json  synthetic_demo_cache.json  temperature_chow_hierarchy_repair.json  temperature_scaled_chow.json
tests/ops/: test_bbox.py  test_ops_tracks.py
tests/sample_tsv/: README.md  coldp_distribution.tsv  coldp_media.tsv  coldp_name_usage.tsv  coldp_reference.tsv  coldp_type_material.tsv  coldp_vernacular_name.tsv  expanded_taxa.tsv  expanded_taxa_sample.tsv  generate_lca_sample.sql  inat_to_coldp_taxon_map.tsv
typus/: __init__.py  export_schemas.py  pollinator_groups.py
typus/helpers/: __init__.py  classification.py
typus/models/: __init__.py  clade.py  classification.py  detection.py  geometry.py  summary.py  taxon.py  tracks.py
typus/models/detection/: utils.py
typus/models/detection_utils/: utils.py
typus/ops/: tracks.py
typus/orm/: expanded_taxa.py
typus/schemas/: BBoxXYWHNorm.json  ClassificationResult.json  Detection.json  HierarchicalClassificationResult.json  ImageDetectionResult.json  InstancePrediction.json  TaxonSummary.json  TaxonTrailNode.json  Track.json  TrackStats.json
typus/services/: __init__.py  elevation.py  pg_index_helper.py  pg_test_ops.py  sqlite.py  sqlite_loader.py  taxonomy.py
typus/services/elevation/: __init__.py  postgres.py
typus/services/taxonomy/: __init__.py  abstract.py  common.py  errors.py  postgres.py  sqlite.py
