[project]
name = "typus"
version = "0.1.0-alpha"
description = "Core taxonomy & metadata types for Polli‑Labs"
license = "MIT"
authors = [
  {name = "Polli‑Labs", email = "dev@polli.ai"}
]
requires-python = ">=3.9"
readme = "README.md"
keywords = ["taxonomy", "ecology", "pydantic", "sqlalchemy"]

dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "rapidfuzz>=3.6",
    "psycopg-binary>=3.1",
    "aiosqlite>=0.19"  # For async SQLite support
]

[project.optional-dependencies]
postgres = ["asyncpg"]

[tool.setuptools]  # avoid stray dir
packages = ["typus"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."] 