[project]
name        = "typus"
version     = "0.1.5"
description = "Taxonomic types, projections and async taxonomy services for Polli-Labs."
readme      = "README.md"
license     = "MIT"
authors     = [{ name = "Polli-Labs", email = "caleb@polli.ai" }]
requires-python = ">=3.9"

keywords = ["taxonomy", "ecology", "pydantic", "sqlalchemy"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

# --- runtime dependencies (lightweight) ---
dependencies = [
  "pydantic>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0,<3",
  "rapidfuzz>=3.6,<4",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
sqlite   = ["aiosqlite>=0.19"]
pgvector = ["psycopg-binary>=3.1"]  # if you later use vector search

[project.urls]
Homepage = "https://github.com/polli-labs/typus"
Issues   = "https://github.com/polli-labs/typus/issues"

# ------------------------------------------------------------------
# Build backend: hatchling
# ------------------------------------------------------------------
[build-system]
requires      = ["hatchling>=1.18"]
build-backend = "hatchling.build"

# ------------------------------------------------------------------
# Hatchling settings
# ------------------------------------------------------------------
[tool.hatch.metadata]
allow-plugins = true

[tool.hatch.build.targets.wheel]
packages = { find = { include = ["typus*"] } }

# ------------------------------------------------------------------
# Ruff & pytest (dev only)
# ------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py39"
extend-select  = ["I"]          # isort
extend-ignore  = ["E501"]       # handled by formatter

[tool.pytest.ini_options]
addopts     = "-q"
minversion  = "7.0"
pythonpath  = ["."]